components/Header/Header.module.css
.container {
    position: fixed;
    top: 0;
    /* 8em to account for the margins */
    width: calc(100% - 8em);
    background-color: white;
    z-index: 10;

    min-height: 8em;
    /* 1em top is for the margin that no longer applies due to it being fixed */
    padding: 1em 3em 0 3em;

    display: flex;
    justify-content: space-between;
    align-items: center;
}

.container h1 {
    font-family: var(--font-accent);
    font-size: clamp(1.75rem, 2vw, 5rem);
}

.navBar {
    min-width: 60%;
}

.navList {
    display: flex;
    justify-content: space-between;
}

.navList li a {
    font-family: var(--font-accent);
    font-size: clamp(1.25rem, 1.5vw, 3rem);
}

@media only screen and (max-width: 768px) {
    .container {
        padding: 0 1em;
        width: calc(100% - 6em);
    }
}

@media only screen and (max-width: 700px) {
    .container {
        flex-direction: column;
        justify-content: space-evenly;
    }

    .navBar {
        width: 80%;
    }
}

@media only screen and (max-width: 600px) {
    .container {
        width: calc(100% - 2em);
    }
}

@media only screen and (max-width: 320px) {
    .navBar {
        width: 100%;
    }

    .navList {
        justify-content: space-between;
    }
}

